Adds admin notification

--- a/src/templates/_emails/admin.twig
+++ b/src/templates/_emails/admin.twig
@@ -138,7 +138,7 @@
                                                     <tr>
                                                         <td align="center" valign="top" mc:edit="body4"
                                                             style="color: #434345; font-family: 'Trebuchet MS', Helvetica, sans-serif, 'Lato', sans-serif; font-size: 30px; mso-line-height-rule: exactly; line-height: 36px; font-weight: 700;">
-                                                            Thank You!
+                                                            Congratulations! you have received a payment:
                                                         </td>
                                                     </tr>
                                                     <tr>
@@ -174,7 +174,20 @@
                                                     <tr>
                                                         <td align="center" valign="top" mc:edit="body5"
                                                             style="color: #434345; font-weight: bolder; font-family: 'Trebuchet MS', Helvetica, sans-serif, 'Lato', sans-serif; font-size: 16px; mso-line-height-rule: exactly; line-height: 24px; font-weight: 400;">
-                                                            {{ "Product:" }} {{ order.getButton().name }}
+                                                            {{ "PayPal Transaction Id: " }} {{ order.paypalTransactionId }}
+                                                        </td>
+                                                    </tr>
+                                                    <tr>
+                                                        <td align="center" valign="top" mc:edit="body5"
+                                                            style="color: #434345; font-weight: bolder; font-family: 'Trebuchet MS', Helvetica, sans-serif, 'Lato', sans-serif; font-size: 16px; mso-line-height-rule: exactly; line-height: 24px; font-weight: 400;">
+                                                            {{ "Customer: " }}
+                                                            <a href="mailto:{{ order.email }}">{{ order.email }}</a>
+                                                        </td>
+                                                    </tr>
+                                                    <tr>
+                                                        <td align="center" valign="top" mc:edit="body5"
+                                                            style="color: #434345; font-weight: bolder; font-family: 'Trebuchet MS', Helvetica, sans-serif, 'Lato', sans-serif; font-size: 16px; mso-line-height-rule: exactly; line-height: 24px; font-weight: 400;">
+                                                            {{ "Button: " }} {{ order.getButton().name }}
                                                         </td>
                                                     </tr>
                                                     <tr>
@@ -203,7 +216,7 @@
                                                                                     style="color: #ffffff; font-family: 'Trebuchet MS', Helvetica, sans-serif, 'Lato', sans-serif;  padding: 0 25px; font-size: 14px; mso-line-height-rule: exactly; line-height: 24px; font-weight: 900; text-transform: uppercase; letter-spacing: 0.06em">
                                                                                       <span style="color: #ffffff;">
                                                                                         <a style="text-decoration: none; color: #ffffff;"
-                                                                                           href="{{ order.getButton().returnUrl }}">read more</a>
+                                                                                           href="{{ order.getCpEditUrl() }}">read more</a>
                                                                                       </span>
                                                                                 </td>
                                                                             </tr>
