--- a/src/templates/orders/_edit.twig
+++ b/src/templates/orders/_edit.twig
@@ -2,8 +2,9 @@
 {% import "_includes/forms" as forms %}
 
 {% set selectedSubnavItem = "orders" %}
-
+{% set fullPageForm = true %}
 {% set title = "Order: "~order.number %}
+{% set saveShortcutRedirect = continueEditingUrl %}
 
 {% set crumbs = [
     {    label: "Orders"|t('enupal-paypal'), url: url('enupal-paypal/orders') }
@@ -37,7 +38,7 @@
                 <li><a class="formsubmit error"
                        data-action="enupal-paypal/orders/delete-order"
                        data-confirm="{{ 'Are you sure you want to delete this order?'|t('enupal-paypal') }}"
-                       data-redirect="{{ 'enupal-paypal/orders#'|hash }}">{{ 'Delete'|t('app') }}</a>
+                       data-redirect="{{ 'enupal-paypal/orders'|hash }}">{{ 'Delete'|t('app') }}</a>
                 </li>
             </ul>
 
@@ -46,12 +47,11 @@
 {% endblock %}
 
 {% block details %}
-
+    {% namespace 'fields' %}
     <div class="meta">
         {% include 'enupal-paypal/orders/_orderInfo' %}
-        {#{% include 'enupal-paypal/orders/_addresses' %}#}
     </div>
-
+    {% endnamespace %}
 {% endblock %}
 
 {% block content %}
@@ -65,7 +65,7 @@
     font-weight: bold;
     position: absolute;
     top: 80px;
-    right: 350px;
+    right: 250px;
     font-family: 'Helvetica', serif;
     color: rgba(211, 65, 50, 0.5);
     font-size: 35px;
