Adds discount and taxes validators

--- a/src/templates/settings/taxes.twig
+++ b/src/templates/settings/taxes.twig
@@ -25,7 +25,7 @@
 
     <input type="hidden" name="action"
            value="enupal-paypal/settings/save-settings">
-
+    <input type="hidden" name="paypalScenario" value="taxes">
     <div id="settings-cp">
 
         {% namespace 'settings' %}
