--- a/src/templates/_frontend/button.twig
+++ b/src/templates/_frontend/button.twig
@@ -1,5 +1,5 @@
 {% spaceless %}
-<form class="paypal-button" method="post" action="{{ button.getPaypalUrl() }}" {% if button.openIn == 1 %} target="_blank" {% endif %}>
+<form class="paypal-button" id="paypal-button-{{ button.id }}" method="post" action="{{ button.getPaypalUrl() }}" {% if button.openIn == 1 %} target="_blank" {% endif %}>
     <input name="item_name" value="{{ button.name }}" type="hidden">
     {% if button.amount %}
     <input name="amount" value="{{ button.amount|number }}" type="hidden">
