Adds better placeholders to returnUrl

--- a/src/templates/buttons/_sidebar/settings.twig
+++ b/src/templates/buttons/_sidebar/settings.twig
@@ -173,7 +173,7 @@
         id: 'returnUrl',
         name: 'returnUrl',
         value: paypalButton.returnUrl,
-        placeholder: '/thank-you',
+        placeholder: '/order?number={number}',
         autofocus: true,
         errors: paypalButton.getErrors('returnUrl')
     }) }}
