--- a/src/templates/settings/general.twig
+++ b/src/templates/settings/general.twig
@@ -59,7 +59,7 @@
 
             {{ forms.textField({
                 label: "Sandbox Account"|t('enupal-paypal'),
-                instructions: "The PayPal Sandbox is a self-contained, virtual testing environment that mimics the live PayPal production environment. Use your existing PayPal account to log in to the Developer website at <a href='developer.paypal.com'>developer.paypal.com</a>, or create a new PayPal account by clicking the Sign Up button on this site."|t('enupal-paypal'),
+                instructions: "The PayPal Sandbox is a self-contained, virtual testing environment that mimics the live PayPal production environment. Use your existing PayPal account to log in to the Developer website at <a href='https://developer.paypal.com/'>developer.paypal.com</a>, or create a new PayPal account by clicking the Sign Up button on this site."|t('enupal-paypal'),
                 id: 'sandboxAccount',
                 name: 'sandboxAccount',
                 value: settings.sandboxAccount,
