--- a/src/templates/buttons/_edit.twig
+++ b/src/templates/buttons/_edit.twig
@@ -132,8 +132,8 @@
     </div>
 {% endblock %}
 
-{% do view.registerAssetBundle("enupal\\paypal\\assetbundles\\PaypalButtonAsset") %}
-{% do view.registerAssetBundle("enupal\\paypal\\assetbundles\\FontAwesomeAsset") %}
+{% do view.registerAssetBundle("enupal\\paypal\\web\\PaypalButtonAsset") %}
+{% do view.registerAssetBundle("enupal\\paypal\\web\\FontAwesomeAsset") %}
 {% js %}
     $(document).ready(function() {
         var clipboard = new Clipboard('.clipbtn');
