--- a/src/templates/orders/index.twig
+++ b/src/templates/orders/index.twig
@@ -10,5 +10,5 @@
 {% extends "enupal-paypal/_layouts/elementindex" %}
 {% set title = "Orders"|t %}
 {% set elementType = 'enupal\\paypal\\elements\\Order' %}
-{% do view.registerAssetBundle("enupal\\paypal\\assetBundles\\FontAwesomeAsset") %}
-{% do view.registerAssetBundle("enupal\\paypal\\assetBundles\\OrdersAsset") %}
+{% do view.registerAssetBundle("enupal\\paypal\\web\\FontAwesomeAsset") %}
+{% do view.registerAssetBundle("enupal\\paypal\\web\\OrdersAsset") %}
