--- a/src/templates/_frontend/button.twig
+++ b/src/templates/_frontend/button.twig
@@ -3,7 +3,7 @@
     {{ csrfInput() }}
     <input name="item_name" value="{{ button.name }}" type="hidden">
     {% if button.amount %}
-    <input name="amount" value="{{ button.amount|number }}" type="hidden">
+    <input name="amount" value="{{ button.amount | number_format(2, '.', '') }}" type="hidden">
     {% endif %}
     {# <!-- Provide a drop-down menu option field with prices. --> #}
     {% if button.enupalPaypalPricedVariants is defined and button.enupalPaypalPricedVariants and button.enupalPaypalPricedVariants.one()  %}
@@ -18,7 +18,7 @@
                         <option value="">{{ "Select a"|t }} {{ pricedOptionsBlock.variantName|t }}</option>
                     {% endif %}
                     <option value="{{ row.handle }}">{{ row.optionLabel|t }}</option>
-                    {% set hiddenFieldsHtml = hiddenFieldsHtml ~ '<input type="hidden" name="option_select'~loop.index0~'" value="'~row.handle~'"><input type="hidden" name="option_amount'~loop.index0~'" value="'~row.price|number~'">' %}
+                    {% set hiddenFieldsHtml = hiddenFieldsHtml ~ '<input type="hidden" name="option_select'~loop.index0~'" value="'~row.handle~'"><input type="hidden" name="option_amount'~loop.index0~'" value="'~ row.price | number_format(2, ".", "")~'">' %}
                 {% endfor %}
             </select>
         </div>
